--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.13.3-2025.3.3-bddbd99f7
+appVersion: v2.13.3-2025.3.5-50344f005
 kubeVersion: ">=1.25.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.7.14-4-cap-2.13.3-2025.3.3-bddbd99f7
+version: 7.7.14-5-cap-2.13.3-2025.3.5-50344f005
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: bumped argo-cd to v2.13.3-2025.3.3-bddbd99f7 + bumped helm to 3.17.1 + bumped dex to 2.42.0 + bumped golang-jwt/jwt/v4 to 4.5.1
+      description: bumped argo-cd to v2.13.3-2025.3.5-50344f005 + bumped git-lfs to 3.6.1
