fix(argo-cd): add allowed audiences parameter to values.yaml
Signed-off-by: Brynn Crowley <littlehill723@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -225,6 +225,9 @@ configs:
     #     -----BEGIN CERTIFICATE-----
     #     ... encoded certificate data here ...
     #     -----END CERTIFICATE-----
+    #   allowedAudiences:
+    #     - aaaabbbbccccddddeee
+    #     - qqqqwwwweeeerrrrttt
     #   requestedIDTokenClaims:
     #     groups:
     #       essential: true
