--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Added commented allowedAudiences parameter to values.yaml
+    - kind: added
+      description: Added comments from upstream docs to align better
