fix(argo-cd): add missing keys from upstream docs
Signed-off-by: Brynn Crowley <littlehill723@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -30,3 +30,5 @@ annotations:
       description: Added commented allowedAudiences parameter to values.yaml
     - kind: added
       description: Added comments from upstream docs to align better
+    - kind: added
+      description: Added missing keys from upstream docs
