--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -156,4 +156,145 @@ config:
 
   # -- Argo CD Image Updater registries list configuration. More information [here](https://argocd-image-updater.readthedocs.io/en/stable/configuration/registries/).
   registries: []
-    # - name:
+    # - name: Docker Hub
+    #   api_url: https://registry-1.docker.io
+    #   ping: yes
+    #   credentials: secret:foo/bar#creds
+    #   defaultns: library
+    # - name: Google Container Registry
+    #   api_url: https://gcr.io
+    #   prefix: gcr.io
+    #   ping: no
+    #   credentials: pullsecret:foo/bar
+    # - name: RedHat Quay
+    #   api_url: https://quay.io
+    #   ping: no
+    #   prefix: quay.io
+    #   credentials: env:REGISTRY_SECRET
+    # - name: ECR
+    #   api_url: https://123456789.dkr.ecr.eu-west-1.amazonaws.com
+    #   prefix: 123456789.dkr.ecr.eu-west-1.amazonaws.com
+    #   ping: yes
+    #   insecure: no
+    #   credentials: ext:/scripts/auth1.sh
+    #   credsexpire: 10h
+    # - name: Azure Container Registry
+    #   api_url: https://acr1.azurecr.io
+    #   prefix: acr1.azurecr.io
+    #   ping: yes
+    #   credentials: ext:/scripts/azure-workload-identity.sh
+    #   credsexpire: 1h
+
+  sshConfig:
+    # -- Name of the sshConfig ConfigMap
+    name: argocd-image-updater-ssh-config
+    # -- Argo CD Image Updater ssh client parameter configuration.
+    config: ""
+    #  config: |
+    #    Host *
+    #          PubkeyAcceptedAlgorithms +ssh-rsa
+    #          HostkeyAlgorithms +ssh-rsa
+
+# whether to mount authentication scripts, if enabled, the authentication scripts will be mounted on /scripts that can be used to authenticate with registries (Azure, ECR)
+# refer to https://argocd-image-updater.readthedocs.io/en/stable/configuration/registries/#specifying-credentials-for-accessing-container-registries for more info
+authScripts:
+  # -- Set to 'true' to enable mounting the defined authentication scripts. If enabled, the scripts will be mounted at `/scripts` within the pod.
+  enabled: false
+  # -- Name of the authentication scripts ConfigMap
+  name: argocd-image-updater-authscripts
+  # -- Map of key-value pairs where the key consists of the name of the script and the value the contents. Expect the script to output Docker credentials in the form: <username>:<password> Authentication scripts can be used for various cloud providers like ECR or Azure Workload Identity. For Azure Workload Identity, you can place your authentication script here to handle token acquisition.
+  scripts: {}
+    # auth1.sh: |
+    #   #!/bin/sh
+    #   echo "auth script 1 here"
+    # auth2.sh: |
+    #   #!/bin/sh
+    #   echo "auth script 2 here"
+    # azure-workload-identity.sh: |
+    #   #!/bin:sh
+    #   # Example script for Azure Workload Identity.
+    #   # This script would typically use environment variables set by the workload identity
+    #   # to acquire an Azure AD token and authenticate with Azure Container Registry (ACR).
+    #   # It should output the Docker username and password on stdout, e.g., '00000000-0000-0000-0000-000000000000:<token>'
+
+serviceAccount:
+  # -- Specifies whether a service account should be created
+  create: true
+  # -- Annotations to add to the service account, useful for integrating with platforms like Azure Workload Identity.
+  annotations: {}
+  # Example for Azure Workload Identity:
+    # azure.workload.identity/client-id: "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+  # -- Labels to add to the service account, useful for integration with platforms like Azure Workload Identity.
+  labels: {}
+  # Example for Azure Workload Identity:
+  #  azure.workload.identity/use: "true"
+  # -- The name of the service account to use. If not set and create is true, a name is generated using the fullname template.
+  name: ""
+
+# -- Pod Annotations for the deployment
+podAnnotations: {}
+
+# -- Labels to apply to the pods, useful for integrating with platforms like Azure Workload Identity.
+podLabels: {}
+  # azure.workload.identity/use: "true"
+
+# -- Pod security context settings for the deployment
+podSecurityContext: {}
+  # fsGroup: 2000
+
+# -- Security context settings for the deployment
+# @default -- See [values.yaml]
+securityContext:
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: true
+  runAsNonRoot: true
+  seccompProfile:
+    type: RuntimeDefault
+
+rbac:
+  # -- Enable RBAC creation
+  enabled: true
+
+# -- Pod memory and cpu resource settings for the deployment
+resources: {}
+
+# -- Kubernetes nodeSelector settings for the deployment
+nodeSelector: {}
+
+# -- Kubernetes toleration settings for the deployment
+tolerations: []
+
+# -- Kubernetes affinity settings for the deployment
+affinity: {}
+
+# Metrics configuration
+metrics:
+  # -- Deploy metrics service
+  enabled: false
+  service:
+    # -- Metrics service annotations
+    annotations: {}
+    # -- Metrics service labels
+    labels: {}
+    # -- Metrics service port
+    servicePort: 8081
+  serviceMonitor:
+    # -- Enable a prometheus ServiceMonitor
+    enabled: false
+    # -- Prometheus ServiceMonitor interval
+    interval: 30s
+    # -- Prometheus [RelabelConfigs] to apply to samples before scraping
+    relabelings: []
+    # -- Prometheus [MetricRelabelConfigs] to apply to samples before ingestion
+    metricRelabelings: []
+    # -- Prometheus ServiceMonitor selector
+    selector: {}
+      # promtheus: kube-prometheus
+
+    # -- Prometheus ServiceMonitor namespace
+    namespace: ""
+    # -- Prometheus ServiceMonitor labels
+    additionalLabels: {}
