--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -193,7 +193,7 @@ config:
   sshConfig:
     # -- Name of the sshConfig ConfigMap
     name: argocd-image-updater-ssh-config
-    # -- Argo CD Image Updater ssh client parameter configuration.
+    # -- Argo CD Image Updater ssh client parameter configuration
     config: ""
     #  config: |
     #    Host *
@@ -207,7 +207,10 @@ authScripts:
   enabled: false
   # -- Name of the authentication scripts ConfigMap
   name: argocd-image-updater-authscripts
-  # -- Map of key-value pairs where the key consists of the name of the script and the value the contents. Expect the script to output Docker credentials in the form: <username>:<password> Authentication scripts can be used for various cloud providers like ECR or Azure Workload Identity. For Azure Workload Identity, you can place your authentication script here to handle token acquisition.
+  # -- Map of key-value pairs where the key consists of the name of the script and the value the contents. 
+  ## Expect the script to output Docker credentials in the form: <username>:<password>
+  ## Authentication scripts can be used for various cloud providers like ECR or Azure Workload Identity.
+  ## For Azure Workload Identity, you can place your authentication script here to handle token acquisition.
   scripts: {}
     # auth1.sh: |
     #   #!/bin/sh
@@ -225,11 +228,11 @@ authScripts:
 serviceAccount:
   # -- Specifies whether a service account should be created
   create: true
-  # -- Annotations to add to the service account, useful for integrating with platforms like Azure Workload Identity.
+  # -- Annotations to add to the service account, useful for integrating with platforms like Azure Workload Identity
   annotations: {}
   # Example for Azure Workload Identity:
     # azure.workload.identity/client-id: "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-  # -- Labels to add to the service account, useful for integration with platforms like Azure Workload Identity.
+  # -- Labels to add to the service account, useful for integration with platforms like Azure Workload Identity
   labels: {}
   # Example for Azure Workload Identity:
   #  azure.workload.identity/use: "true"
@@ -240,7 +243,7 @@ serviceAccount:
 # -- Pod Annotations for the deployment
 podAnnotations: {}
 
-# -- Labels to apply to the pods, useful for integrating with platforms like Azure Workload Identity.
+# -- Labels to apply to the pods, useful for integrating with platforms like Azure Workload Identity
 podLabels: {}
   # azure.workload.identity/use: "true"
 
