--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -203,7 +203,7 @@ config:
 # whether to mount authentication scripts, if enabled, the authentication scripts will be mounted on /scripts that can be used to authenticate with registries (Azure, ECR)
 # refer to https://argocd-image-updater.readthedocs.io/en/stable/configuration/registries/#specifying-credentials-for-accessing-container-registries for more info
 authScripts:
-  # -- Set to 'true' to enable mounting the defined authentication scripts. If enabled, the scripts will be mounted at `/scripts` within the pod.
+  # -- Whether to mount the defined scripts that can be used to authenticate with a registry, the scripts will be mounted at `/scripts`
   enabled: false
   # -- Name of the authentication scripts ConfigMap
   name: argocd-image-updater-authscripts
@@ -228,11 +228,11 @@ authScripts:
 serviceAccount:
   # -- Specifies whether a service account should be created
   create: true
-  # -- Annotations to add to the service account, useful for integrating with platforms like Azure Workload Identity
+  # -- Annotations to add to the service account
   annotations: {}
   # Example for Azure Workload Identity:
     # azure.workload.identity/client-id: "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-  # -- Labels to add to the service account, useful for integration with platforms like Azure Workload Identity
+  # -- Labels to add to the service account
   labels: {}
   # Example for Azure Workload Identity:
   #  azure.workload.identity/use: "true"
@@ -243,7 +243,7 @@ serviceAccount:
 # -- Pod Annotations for the deployment
 podAnnotations: {}
 
-# -- Labels to apply to the pods, useful for integrating with platforms like Azure Workload Identity
+# -- Labels to apply to the pods
 podLabels: {}
   # azure.workload.identity/use: "true"
 
