use dual-stack AWS ECR registry for redis
Signed-off-by: Ryan Taylor <1686627+rptaylor@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -99,7 +99,7 @@
     },
     {
       "matchPackageNames": [
-        "public.ecr.aws/docker/library/redis"
+        "ecr-public.aws.com/docker/library/redis"
       ],
       "matchDatasources": [
         "docker"
